# Lumen

./: LICENSE  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/src/: app.py
backend/src/config/: settings.py
backend/src/controllers/: auth_controller.py  chat_controller.py  document_controller.py  session_controller.py
backend/src/database/: db.py
backend/src/models/: models.py  user_model.py
backend/src/rag/: agent.py  agent_tools.py  chat_engine.py  embeddings.py  llm.py  loader.py  pipeline.py  splitter.py  vector_store.py
backend/src/routes/: auth_routes.py  documents_routes.py  session_routes.py
backend/src/schemas/: schema.py
backend/src/utils/: jwt_utils.py  limiter.py  validate_document.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Auth.jsx  ChatArea.jsx  Dashboard.jsx  DragDropOverlay.jsx  MessageInput.jsx  Sidebar.jsx
