[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "uvicorn[standard]>=0.48.0",
    "sqlalchemy>=2.0.50",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi>=0.136.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "aiosqlite>=0.22.1",
    "pyjwt>=2.13.0",
]
